removed filter options from request body
